--- a/packages/components/src/Tooltip/Tooltip.css
+++ b/packages/components/src/Tooltip/Tooltip.css
@@ -5,17 +5,17 @@
 }
 
 .wrapper {
-  position: relative;
+  display: none;
 }
 
 .tooltip {
   display: inline-block;
-  position: absolute;
-  width: calc(var(--base-unit) * 15);
+  position: fixed;
+  z-index: 1000;
+  max-width: calc(var(--base-unit) * 15);
   padding: var(--space-small);
   border: var(--border-base) solid var(--tooltip--border-color);
   border-radius: var(--radius-base);
-  text-align: center;
   background-color: var(--color-lightBlue--lightest);
 }
 
@@ -38,7 +38,7 @@
 }
 
 .above {
-  bottom: 100%;
+  /* bottom: 100%; */
   margin-bottom: var(--tooltip--arrow-size);
 }
 
@@ -49,7 +49,7 @@
 }
 
 .below {
-  top: 100%;
+  /* top: 100%; */
   margin-top: var(--tooltip--arrow-size);
 }
 
