--- a/packages/components/src/InputGroup/InputGroup.css
+++ b/packages/components/src/InputGroup/InputGroup.css
@@ -14,48 +14,39 @@
 
 /* Border Radius Tweak  */
 
-.inputGroup input,
-.inputGroup textarea,
-.inputGroup select {
-  border-radius: 0;
+.inputGroup {
+  --public-field--top-left-radius: 0;
+  --public-field--top-right-radius: 0;
+  --public-field--bottom-left-radius: 0;
+  --public-field--bottom-right-radius: 0;
 }
 
-.vertical > :first-child > input,
-.vertical > :first-child > textarea,
-.vertical > :first-child > select {
-  border-radius: var(--radius-base) var(--radius-base) 0 0;
+.vertical > :first-child:not(.horizontal) {
+  --public-field--top-left-radius: var(--radius-base);
+  --public-field--top-right-radius: var(--radius-base);
 }
 
-.vertical > :last-child > input,
-.vertical > :last-child > textarea,
-.vertical > :last-child > select {
-  border-radius: 0 0 var(--radius-base) var(--radius-base);
+.vertical > :last-child:not(.horizontal) {
+  --public-field--bottom-left-radius: var(--radius-base);
+  --public-field--bottom-right-radius: var(--radius-base);
 }
 
 /* First Horizontal Input Group */
 
-.horizontal:first-child > :first-child > input,
-.horizontal:first-child > :first-child > textarea,
-.horizontal:first-child > :first-child > select {
-  border-top-left-radius: var(--radius-base);
+.horizontal:first-child > :first-child {
+  --public-field--top-left-radius: var(--radius-base);
 }
 
-.horizontal:first-child > :last-child > input,
-.horizontal:first-child > :last-child > textarea,
-.horizontal:first-child > :last-child > select {
-  border-top-right-radius: var(--radius-base);
+.horizontal:first-child > :last-child {
+  --public-field--top-right-radius: var(--radius-base);
 }
 
 /* Last Horizontal Input Group */
 
-.horizontal:last-child > :first-child > input,
-.horizontal:last-child > :first-child > textarea,
-.horizontal:last-child > :first-child > select {
-  border-bottom-left-radius: var(--radius-base);
+.horizontal:last-child > :first-child {
+  --public-field--bottom-left-radius: var(--radius-base);
 }
 
-.horizontal:last-child > :last-child > input,
-.horizontal:last-child > :last-child > textarea,
-.horizontal:last-child > :last-child > select {
-  border-bottom-right-radius: var(--radius-base);
+.horizontal:last-child > :last-child {
+  --public-field--bottom-right-radius: var(--radius-base);
 }
