add z-index to elevation list

--- a/packages/components/src/Tooltip/Tooltip.css
+++ b/packages/components/src/Tooltip/Tooltip.css
@@ -11,7 +11,7 @@
 .tooltipWrapper {
   display: inline-block;
   position: absolute;
-  z-index: 1000;
+  z-index: var(--elevation-tooltip);
 }
 
 .tooltip {
