--- a/packages/components/src/FeatureSwitch/FeatureSwitch.css
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.css
@@ -10,4 +10,14 @@
 
 .action {
   flex: 0 0 auto;
+  align-self: flex-start;
+  position: relative;
+}
+
+.savedIndicator {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  margin-top: var(--space-smallest);
+  text-align: center;
 }
