--- a/packages/components/src/Content/Content.css
+++ b/packages/components/src/Content/Content.css
@@ -1,7 +1,7 @@
-:root {
-  --public-content--padding: var(--space-base);
+.padded {
+  padding: var(--public-content--padding, 0);
 }
 
-.padded {
-  padding: var(--public-content--padding);
+.padded .padded {
+  padding: 0;
 }
