--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -5,9 +5,6 @@
 }
 
 .container {
-  --public-content--padding: var(--modal--padding);
-  --public-tab--inset: var(--space-large);
-
   display: flex;
   flex-direction: column;
   z-index: var(--elevation-modal);
@@ -30,6 +27,8 @@
 }
 
 .modal {
+  --public-tab--inset: var(--space-large);
+
   position: relative;
   flex: 0 0 auto;
   width: 100%;
@@ -39,6 +38,18 @@
   border-radius: var(--radius-base);
   outline-color: var(--color-outline);
   background-color: var(--color-white);
+}
+
+/* Adjust `Content` components public padding to match the modal */
+
+.modal > * {
+  --public-content--padding: var(--modal--padding);
+}
+
+/* Remove the nested `Content` components public padding */
+
+.modal > * * {
+  --public-content--padding: 0;
 }
 
 .header {
