--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -1,12 +1,15 @@
 .page {
   width: 100%;
-  max-width: calc(var(--base-unit) * 80);
   box-sizing: border-box;
   padding: var(--space-large);
 }
 
 .fill {
   max-width: none;
+}
+
+.standard {
+  max-width: calc(var(--base-unit) * 80);
 }
 
 .narrow {
