feat: BREAKING CHANGE: Adjust card, modal, and form fields to comply with content component (#118)
* add first pass on content component

* remove left border of first tab

* adjust card component and documentation

* remove form field margin and adjust every field documentation

* add base padding by default on content

* adjust modal styligng to accomodate content

* put base padding as default for content

* adjust input text documentation

* remove unecessary code

* content aware content padding

* content aware tabs

* update public tab inset because i forgot

* remove card default margin

* remove padding none

* simplify modal docs

* don't export title

* better input and select examples

* adjust content tests

* remove the title from examples

* make content real smart by adding padding automatically

* adjust markdown tests

* adjust card and modal tests

* Update package-lock.json

* adjust contents padding on when nested

* remove commited weird example

* remove padded prop

--- a/packages/components/src/Tabs/Tabs.css
+++ b/packages/components/src/Tabs/Tabs.css
@@ -3,6 +3,7 @@
   --tab--border-color--selected: var(--color-green);
   --tab--height: calc(var(--space-larger) + var(--space-small));
   --tab--inset: var(--space-base);
+  --public-tab--inset: var(--tab--inset);
 }
 
 .tabs {
@@ -45,10 +46,10 @@
   flex: 0 0 auto;
   height: var(--tab--height);
   margin: 0;
-  padding-left: var(--tab--inset);
-  padding-right: var(--tab--inset);
+  padding-left: var(--public-tab--inset);
+  padding-right: var(--public-tab--inset);
   border: solid var(--border-base) var(--tab--border-color);
-  border-right-width: 0;
+  border-left-width: 0;
   outline: none;
   background: transparent;
   cursor: pointer;
@@ -58,10 +59,6 @@
 .tab:hover,
 .tab:focus {
   background-color: var(--color-yellow--lightest);
-}
-
-.tab:last-child {
-  border-right-width: var(--border-base);
 }
 
 .selected {
@@ -74,5 +71,8 @@
 }
 
 .tabContent {
-  padding: var(--space-base);
+  padding-top: var(--tab--inset);
+  padding-bottom: var(--tab--inset);
+  padding-left: var(--public-tab--inset);
+  padding-right: var(--public-tab--inset);
 }
