--- a/packages/components/src/FeatureSwitch/FeatureSwitch.css
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.css
@@ -6,6 +6,7 @@
   flex: 1 1 auto;
   align-self: center;
   padding-right: var(--space-base);
+  transition: opacity var(--timing-base);
 }
 
 .action {
