--- a/packages/components/src/Icon/Icon.css
+++ b/packages/components/src/Icon/Icon.css
@@ -2,3 +2,11 @@
   display: inline-block;
   vertical-align: middle;
 }
+
+.longArrowUp {
+  transform: rotate(90deg);
+}
+
+.longArrowDown {
+  transform: rotate(-90deg);
+}
