--- a/packages/components/src/Icon/Icon.css
+++ b/packages/components/src/Icon/Icon.css
@@ -1,4 +1,5 @@
 .icon {
+  fill: var(--color-greyBlue--dark);
   display: inline-block;
   vertical-align: middle;
 }
@@ -9,4 +10,93 @@
 
 .longArrowDown {
   transform: rotate(-90deg);
+}
+
+.person,
+.clients,
+.property {
+  fill: var(--color-teal);
+}
+
+.job,
+.jobOnHold {
+  fill: var(--color-job);
+}
+
+.visit,
+.moveVisits {
+  fill: var(--color-lime);
+}
+
+.event {
+  fill: var(--color-yellow);
+}
+
+.request {
+  fill: var(--color-request);
+}
+
+.reminder,
+.trash {
+  fill: var(--color-red);
+}
+
+.task {
+  fill: var(--color-navy);
+}
+
+.timer {
+  fill: var(--color-lightBlue);
+}
+
+.quote,
+.quoteCopy {
+  fill: var(--color-quote);
+}
+
+.invoice,
+.invoiceLater {
+  fill: var(--color-invoice);
+}
+
+.badInvoice {
+  fill: var(--color-red);
+}
+
+.sendInvoice,
+.paidInvoice {
+  fill: var(--color-green);
+}
+
+.payment,
+.expense {
+  fill: var(--color-orange);
+}
+
+.edit {
+  fill: var(--color-brown);
+}
+
+.archive {
+  fill: var(--color-blue);
+}
+
+.excel {
+  fill: rgb(31, 115, 71);
+}
+
+.file {
+  fill: var(--color-greyBlue);
+}
+
+.pdf {
+  fill: rgb(195, 27, 0);
+}
+
+.word {
+  fill: rgb(41, 86, 154);
+}
+
+.video {
+  fill: var(--color-lightBlue);
 }
