adjust button icons to have the right colors

--- a/packages/components/src/Icon/Colors.css
+++ b/packages/components/src/Icon/Colors.css
@@ -1,3 +1,11 @@
+.white {
+  fill: var(--color-white);
+}
+
+.grey {
+  fill: var(--color-grey);
+}
+
 .greyBlue {
   fill: var(--color-greyBlue);
 }
