fix: Update icons to match SG1 and use SVG instead (#142)
* first pass on svg icons

* adjust css

* clean up docs to show correct list of icons

* put back missing icons and enum names

* add in system colours

* update all da tests

* adjust button icons to have the right colors

* delete icon font

* use svg instead

* Create jobbericons.d.ts

* Revert "use svg instead"

This reverts commit bbeda357077cd7d4098f9730bf9f4084e8fbb80a.

* Revert "Create jobbericons.d.ts"

This reverts commit 8f2e1cf43f3901580580f69d55659420e32ddd2f.

* better enums and default state for reduce

* also delete svg

* Add script to generate iconMap.json

* Remove old coment.

* cleanup da code to use mapped script

* auto generate ts file instead

* remove tsconfig addition

* add back xero

--- a/packages/components/src/Icon/Colors.css
+++ b/packages/components/src/Icon/Colors.css
@@ -1,19 +1,39 @@
+.white {
+  fill: var(--color-white);
+}
+
+.grey {
+  fill: var(--color-grey);
+}
+
 .greyBlue {
-  color: var(--color-greyBlue);
+  fill: var(--color-greyBlue);
+}
+
+.greyBlueDark {
+  fill: var(--color-greyBlue--dark);
+}
+
+.blue {
+  fill: var(--color-blue);
 }
 
 .lightBlue {
-  color: var(--color-lightBlue);
+  fill: var(--color-lightBlue);
 }
 
 .green {
-  color: var(--color-green);
+  fill: var(--color-green);
 }
 
 .yellow {
-  color: var(--color-yellow);
+  fill: var(--color-yellow);
 }
 
 .red {
-  color: var(--color-red);
+  fill: var(--color-red);
+}
+
+.navy {
+  fill: var(--color-navy);
 }
