--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -1,10 +1,39 @@
 .autocomplete {
-  --message-weight: 400;
-
-  font-weight: var(--message-weight);
+  position: relative;
 }
 
-.bold {
-  --message-weight: 800;
-  transform: uppercase;
+.options {
+  /* display: none; */
+  position: absolute;
+  z-index: var(--elevation-menu);
+  width: 100%;
+  max-height: 300px;
+  box-shadow: var(--shadow-base);
+  box-sizing: border-box;
+  padding: var(--space-small);
+  border: var(--border-base) solid var(--color-grey--lighter);
+  border-radius: var(--radius-base);
+  overflow: auto;
+  background-color: var(--color-white);
+}
+
+.autocomplete:focus-within .options {
+  display: block;
+}
+
+.option {
+  padding: var(--space-small);
+  border: none;
+  border-radius: var(--radius-base);
+  list-style: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all var(--timing-base);
+}
+
+.option:hover,
+.option:focus,
+.option.active {
+  background-color: var(--color-yellow--lightest);
+  outline-color: var(--color-outline);
 }
