--- a/packages/components/src/List/List.css
+++ b/packages/components/src/List/List.css
@@ -22,6 +22,7 @@
   text-decoration: none;
   transition: background-color var(--timing-base);
   appearance: none;
+  align-items: flex-start;
 }
 
 .hoverable {
@@ -39,6 +40,7 @@
 }
 
 .icon {
+  display: flex;
   flex: 0 0 auto;
   width: 24px;
 }
