--- a/packages/components/src/List/SectionHeader.css
+++ b/packages/components/src/List/SectionHeader.css
@@ -1,3 +1,11 @@
+.sectionHeader {
+  position: sticky;
+  top: 0;
+  padding: var(--space-small) var(--space-base);
+  border-bottom: 1px solid var(--color-blue);
+  background-color: var(--color-white);
+}
+
 .greyBlue,
 .draft,
 .upcoming {
