--- a/packages/components/src/List/ListItem.css
+++ b/packages/components/src/List/ListItem.css
@@ -6,6 +6,7 @@
   border: none;
   text-align: left;
   text-decoration: none;
+  background-color: transparent;
   transition: background-color var(--timing-base);
   appearance: none;
   align-items: flex-start;
@@ -29,6 +30,7 @@
   display: flex;
   flex: 0 0 auto;
   width: var(--space-large);
+  height: var(--space-large);
 }
 
 .info {
