--- a/packages/components/src/Spinner/Spinner.css
+++ b/packages/components/src/Spinner/Spinner.css
@@ -1,7 +1,6 @@
 .spinner {
   position: relative;
   pointer-events: none;
-  /* 1 */
   opacity: 0.6;
 }
 
@@ -11,23 +10,17 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 3;
-  width: 2.25rem;
-  height: 2.25rem;
-  -webkit-box-shadow: 0px 0px 0.125rem 0.1875rem rgba(1, 27, 37, 0.3);
+  width: var(--space-larger);
+  height: var(--space-larger);
   box-shadow: 0px 0px 0.125rem 0.1875rem rgba(1, 27, 37, 0.3);
   margin: -1.125rem 0 0 -1.125rem;
   border: 0.375rem solid rgba(1, 27, 37, 1);
   border-top-color: rgba(255, 255, 255, 1);
   border-radius: 50%;
   background-color: rgba(1, 27, 37, 0.3);
-  -webkit-animation-duration: 1s;
   animation-duration: 1s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-name: animation-spin;
   animation-name: animation-spin;
-  -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
   will-change: transform;
 }
@@ -60,12 +53,11 @@
 .small:after {
   top: 50%;
   left: 50%;
-  width: 1rem;
-  height: 1rem;
-  -webkit-box-shadow: 0px 0px 1px 2px rgba(1, 27, 37, 0.4);
+  width: var(--space-base);
+  height: var(--space-base);
   box-shadow: 0px 0px 1px 2px rgba(1, 27, 37, 0.4);
   margin: -0.5rem 0 0 -0.5rem;
-  border-width: 0.25rem;
+  border-width: var(--space-smaller);
 }
 
 /* -------------------------------------------------------------------------
@@ -76,11 +68,11 @@
 }
 
 .spinner.inline {
-  width: 3rem;
-  height: 3rem;
+  width: var(--space-largest);
+  height: var(--space-largest);
 }
 
 .spinner.inline.small {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: var(--space-large);
+  height: var(--space-large);
 }
