--- a/packages/components/src/Spinner/Spinner.css
+++ b/packages/components/src/Spinner/Spinner.css
@@ -12,7 +12,7 @@
   left: 50%;
   width: var(--space-larger);
   height: var(--space-larger);
-  box-shadow: 0px 0px 0.125rem 0.1875rem rgba(1, 27, 37, 0.3);
+  box-shadow: var(--shadow-dark);
   margin: -1.125rem 0 0 -1.125rem;
   border: 0.375rem solid rgba(1, 27, 37, 1);
   border-top-color: rgba(255, 255, 255, 1);
@@ -55,7 +55,7 @@
   left: 50%;
   width: var(--space-base);
   height: var(--space-base);
-  box-shadow: 0px 0px 1px 2px rgba(1, 27, 37, 0.4);
+  box-shadow: var(--shadow-dark);
   margin: -0.5rem 0 0 -0.5rem;
   border-width: var(--space-smaller);
 }
