set margin to 0

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -16,6 +16,7 @@
   display: inline-flex;
   min-height: calc(var(--base-unit) * 2.25);
   box-sizing: border-box;
+  margin: 0;
   border: 1px solid transparent;
   border-radius: var(--radius-base);
   color: transparent;
