--- a/packages/components/src/Tooltip/Tooltip.css
+++ b/packages/components/src/Tooltip/Tooltip.css
@@ -24,16 +24,19 @@
   background-color: var(--color-lightBlue--lightest);
 }
 
-.tooltip:after {
+.tooltip .arrow,
+.tooltip .arrow::after {
+  width: var(--tooltip--arrow-size);
+  height: var(--tooltip--arrow-size);
+  background-color: inherit;
+}
+
+.tooltip .arrow::after {
   content: "";
   display: block;
   position: absolute;
-  left: 50%;
-  width: var(--tooltip--arrow-size);
-  height: var(--tooltip--arrow-size);
   border: var(--border-base) solid var(--tooltip--border-color);
-  background-color: inherit;
-  transform: translateX(-50%) rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .above {
@@ -44,8 +47,11 @@
   transform-origin: bottom center;
 }
 
-.above .tooltip:after {
+.above .tooltip .arrow {
   bottom: var(--tooltip--offset);
+}
+
+.above .tooltip .arrow::after {
   border-top-width: 0;
   border-left-width: 0;
 }
@@ -58,8 +64,11 @@
   transform-origin: top center;
 }
 
-.below .tooltip:after {
+.below .tooltip .arrow {
   top: var(--tooltip--offset);
+}
+
+.below .tooltip .arrow::after {
   border-bottom-width: 0;
   border-right-width: 0;
 }
