--- a/packages/components/src/Spinner/Spinner.css
+++ b/packages/components/src/Spinner/Spinner.css
@@ -1,23 +1,20 @@
 .spinner {
-  position: relative;
-  pointer-events: none;
-  opacity: 0.6;
-}
-
-.spinner:after {
   content: "";
   display: block;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   width: var(--space-larger);
   height: var(--space-larger);
   box-shadow: var(--shadow-dark);
-  margin: -1.125rem 0 0 -1.125rem;
+  margin-top: calc(var(--space-larger) / 2 * -1);
+  margin-left: calc(var(--space-larger) / 2 * -1);
   border: 0.375rem solid rgba(1, 27, 37, 1);
   border-top-color: rgba(255, 255, 255, 1);
   border-radius: 50%;
   background-color: rgba(1, 27, 37, 0.3);
+  pointer-events: none;
+  opacity: 0.6;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-name: animation-spin;
@@ -26,10 +23,6 @@
 }
 
 @-webkit-keyframes animation-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
@@ -37,10 +30,6 @@
 }
 
 @keyframes animation-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
@@ -50,7 +39,7 @@
 /* -------------------------------------------------------------------------
    Small Spinner
    ------------------------------------------------------------------------- */
-.small:after {
+.small {
   top: 50%;
   left: 50%;
   width: var(--space-base);
