--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -11,12 +11,25 @@
   --field--padding-left: var(--space-base);
   --field--padding-right: var(--space-base);
   --field--height: var(--space-largest);
+
+  --field--wrapper-elevation: auto;
+
+  --public-field--top-left-radius: var(--radius-base);
+  --public-field--top-right-radius: var(--radius-base);
+  --public-field--bottom-left-radius: var(--radius-base);
+  --public-field--bottom-right-radius: var(--radius-base);
 }
 
 .wrapper {
   position: relative;
+  z-index: var(--field--wrapper-elevation);
   width: 100%;
   background-color: var(--field--background-color);
+}
+
+.wrapper:focus-within {
+  --field--border-color: var(--color-outline);
+  --field--wrapper-elevation: var(--elevation-base);
 }
 
 .formField,
@@ -38,7 +51,10 @@
   width: inherit;
   height: var(--field--height);
   border: var(--field--border-width) solid var(--field--border-color);
-  border-radius: var(--radius-base);
+  border-top-right-radius: var(--public-field--top-right-radius);
+  border-bottom-right-radius: var(--public-field--bottom-right-radius);
+  border-bottom-left-radius: var(--public-field--bottom-left-radius);
+  border-top-left-radius: var(--public-field--top-left-radius);
   outline: none;
   color: var(--field--color);
   font-size: var(--base-unit);
@@ -62,10 +78,6 @@ textarea.formField {
 
 select.formField {
   padding-right: calc(var(--field--padding-right) + var(--space-large));
-}
-
-.formField:focus {
-  --field--border-color: var(--color-outline);
 }
 
 .label {
@@ -128,6 +140,7 @@ select.formField {
 .invalid,
 .invalid .formField:focus {
   --field--border-color: var(--color-red);
+  --field--wrapper-elevation: var(--elevation-base);
 }
 
 .disabled {
@@ -173,7 +186,7 @@ select.formField {
   --field--padding-top: var(--space-larger);
 }
 
-.miniLabel .textareaLabel {
+.miniLabel.textareaLabel .label {
   background-color: var(--color-white);
 }
 
